# wuxing-calendar

./: CLAUDE.md  Cargo.toml  biome.json  index.js  index.ts  justfile  lerna.json  package.json  pnpm-lock.yaml  readme.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/actions/conventional-commits/: action.yaml
.github/actions/prepare/: action.yaml
.github/scripts/: check-for-errors.mjs
.github/workflows/: ci.yml  deploy.yaml  pr.yaml
api/: index.ts  jest.config.ts  package.json  tsconfig.json
api/@types/: element.d.ts  index.d.ts
api/calendars/solar/: index.test.ts  index.ts
api/src/: index.ts
api/src/calendars/hour/: index.test.ts  index.ts
api/src/lib/: date.ts
cli/: Cargo.toml  package.json  tsconfig.json
cli/src/: index.ts  main.rs
core/: Cargo.toml
core/src/: astronomy.rs  lib.rs  phase.rs
core/src/calendars/: hour.rs  lunar.rs  mod.rs  solar.rs
five-phases/: jest.config.ts  package.json  readme.md  tsconfig.json
five-phases/@types/: index.d.ts  phase.d.ts
five-phases/src/: index.ts
five-phases/src/lib/: date.ts
lib/: astro.js
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  package.json  readme.md  tsconfig.json  vite.config.js  vite.config.ts
web/public/: index.html  manifest.json
web/src/: index.tsx  main.js  main.ts  styles.css
web/src/lib/: get-locale.ts  helpers.js  helpers.ts  wasm.js  wasm.ts
web/src/pages/: calendar.js  calendar.ts  calendar.tsx  home.js  home.ts  home.tsx
web/src/redux/: store.ts
web/src/routes/: index.tsx
web/src/styles/: _constants.scss  _global.scss
(+25 files in other folders)
