[package]
name = "wuxing-wasm"
version = "0.1.0"
edition = "2021"
description = "Wuxing (五行) phase calculator — WebAssembly bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wuxing-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
